homework2/y.output
Grammar

    0 $accept: line_list $end

    1 line_list: line_list line
    2          | line

    3 line: expr NEWLINE

    4 expr: term
    5     | expr ADD term
    6     | expr SUB term
    7     | LPAREN expr RPAREN

    8 term: factor
    9     | term MUL factor
   10     | term DIV factor
   11     | SUB factor

   12 factor: NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM <num> (258) 12
    ADD (259) 5
    SUB (260) 6 11
    MUL (261) 9
    DIV (262) 10
    NEWLINE (263) 3
    LPAREN (264) 7
    RPAREN (265) 7


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    line_list (12)
        on left: 1 2
        on right: 0 1
    line (13)
        on left: 3
        on right: 1 2
    expr <num> (14)
        on left: 4 5 6 7
        on right: 3 5 6 7
    term <num> (15)
        on left: 8 9 10 11
        on right: 4 5 6 9 10
    factor <num> (16)
        on left: 12
        on right: 8 9 10 11


State 0

    0 $accept: • line_list $end

    NUM     shift, and go to state 1
    SUB     shift, and go to state 2
    LPAREN  shift, and go to state 3

    line_list  go to state 4
    line       go to state 5
    expr       go to state 6
    term       go to state 7
    factor     go to state 8


State 1

   12 factor: NUM •

    $default  reduce using rule 12 (factor)


State 2

   11 term: SUB • factor

    NUM  shift, and go to state 1

    factor  go to state 9


State 3

    7 expr: LPAREN • expr RPAREN

    NUM     shift, and go to state 1
    SUB     shift, and go to state 2
    LPAREN  shift, and go to state 3

    expr    go to state 10
    term    go to state 7
    factor  go to state 8


State 4

    0 $accept: line_list • $end
    1 line_list: line_list • line

    $end    shift, and go to state 11
    NUM     shift, and go to state 1
    SUB     shift, and go to state 2
    LPAREN  shift, and go to state 3

    line    go to state 12
    expr    go to state 6
    term    go to state 7
    factor  go to state 8


State 5

    2 line_list: line •

    $default  reduce using rule 2 (line_list)


State 6

    3 line: expr • NEWLINE
    5 expr: expr • ADD term
    6     | expr • SUB term

    ADD      shift, and go to state 13
    SUB      shift, and go to state 14
    NEWLINE  shift, and go to state 15


State 7

    4 expr: term •
    9 term: term • MUL factor
   10     | term • DIV factor

    MUL  shift, and go to state 16
    DIV  shift, and go to state 17

    $default  reduce using rule 4 (expr)


State 8

    8 term: factor •

    $default  reduce using rule 8 (term)


State 9

   11 term: SUB factor •

    $default  reduce using rule 11 (term)


State 10

    5 expr: expr • ADD term
    6     | expr • SUB term
    7     | LPAREN expr • RPAREN

    ADD     shift, and go to state 13
    SUB     shift, and go to state 14
    RPAREN  shift, and go to state 18


State 11

    0 $accept: line_list $end •

    $default  accept


State 12

    1 line_list: line_list line •

    $default  reduce using rule 1 (line_list)


State 13

    5 expr: expr ADD • term

    NUM  shift, and go to state 1
    SUB  shift, and go to state 2

    term    go to state 19
    factor  go to state 8


State 14

    6 expr: expr SUB • term

    NUM  shift, and go to state 1
    SUB  shift, and go to state 2

    term    go to state 20
    factor  go to state 8


State 15

    3 line: expr NEWLINE •

    $default  reduce using rule 3 (line)


State 16

    9 term: term MUL • factor

    NUM  shift, and go to state 1

    factor  go to state 21


State 17

   10 term: term DIV • factor

    NUM  shift, and go to state 1

    factor  go to state 22


State 18

    7 expr: LPAREN expr RPAREN •

    $default  reduce using rule 7 (expr)


State 19

    5 expr: expr ADD term •
    9 term: term • MUL factor
   10     | term • DIV factor

    MUL  shift, and go to state 16
    DIV  shift, and go to state 17

    $default  reduce using rule 5 (expr)


State 20

    6 expr: expr SUB term •
    9 term: term • MUL factor
   10     | term • DIV factor

    MUL  shift, and go to state 16
    DIV  shift, and go to state 17

    $default  reduce using rule 6 (expr)


State 21

    9 term: term MUL factor •

    $default  reduce using rule 9 (term)


State 22

   10 term: term DIV factor •

    $default  reduce using rule 10 (term)
